--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,552 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Petrona:ital,wght@0,100..900;1,100..900&display=swap');
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+html {
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  font-family: sans-serif;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: 0;
+  background-color: #ccc;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+  display: block;
+}
+
+audio, canvas, progress, video {
+  vertical-align: baseline;
+  display: inline-block;
+}
+
+audio:not([controls]) {
+  height: 0;
+  display: none;
+}
+
+[hidden], template {
+  display: none;
+}
+
+a {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+a:active, a:hover {
+  outline: 0;
+}
+
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+
+mark {
+  color: #000;
+  background: #ff0;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub, sup {
+  vertical-align: baseline;
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+}
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
+hr {
+  box-sizing: content-box;
+  height: 0;
+}
+
+pre {
+  overflow: auto;
+}
+
+code, kbd, pre, samp {
+  font-family: monospace;
+  font-size: 1em;
+}
+
+button, input, optgroup, select, textarea {
+  color: inherit;
+  font: inherit;
+  margin: 0;
+}
+
+button {
+  overflow: visible;
+}
+
+button, select {
+  text-transform: none;
+}
+
+button, html input[type="button"], input[type="reset"] {
+  -webkit-appearance: button;
+  cursor: pointer;
+}
+
+button[disabled], html input[disabled] {
+  cursor: default;
+}
+
+button::-moz-focus-inner, input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+input {
+  line-height: normal;
+}
+
+input[type="checkbox"], input[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+input[type="search"] {
+  -webkit-appearance: none;
+}
+
+input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+legend {
+  border: 0;
+  padding: 0;
+}
+
+textarea {
+  overflow: auto;
+}
+
+optgroup {
+  font-weight: bold;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+td, th {
+  padding: 0;
+}
+
+[class^="w-icon-"], [class*=" w-icon-"] {
+  font-variant: normal;
+  text-transform: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  font-family: webflow-icons !important;
+}
+
+.w-icon-slider-right:before {
+  content: "î˜€";
+}
+
+.w-icon-slider-left:before {
+  content: "î˜";
+}
+
+.w-icon-nav-menu:before {
+  content: "î˜‚";
+}
+
+.w-icon-arrow-down:before, .w-icon-dropdown-toggle:before {
+  content: "î˜ƒ";
+}
+
+.w-icon-file-upload-remove:before {
+  content: "î¤€";
+}
+
+.w-icon-file-upload-icon:before {
+  content: "î¤ƒ";
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  color: #333;
+  background-color: #fff;
+  min-height: 100%;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+img {
+  vertical-align: middle;
+  max-width: 100%;
+  display: inline-block;
+}
+
+html.w-mod-touch * {
+  background-attachment: scroll !important;
+}
+
+.w-block {
+  display: block;
+}
+
+.w-form-done {
+  text-align: center;
+  background-color: #ddd;
+  padding: 20px;
+  display: none;
+}
+
+.w-form-fail {
+  background-color: #ffdede;
+  margin-top: 10px;
+  padding: 10px;
+  display: none;
+}
+
+label {
+  margin-bottom: 5px;
+  font-weight: bold;
+  display: block;
+}
+
+.w-input {
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  width: 100%;
+  padding: 8px 18px;
+  font-size: 14px;
+  line-height: 1.42857;
+  display: block;
+  border: 1px solid rgba(112, 112, 112, .31);
+  border-radius: 100px 0 0 100px;
+  font-size: 18px;
+  line-height: 30px;
+  display: block;
+  margin: 0;
+}
+
+.w-input:-moz-placeholder, .w-select:-moz-placeholder {
+  color: #999;
+}
+
+.w-input::-moz-placeholder, .w-select::-moz-placeholder {
+  color: #999;
+  opacity: 1;
+}
+
+.w-input::-webkit-input-placeholder, .w-select::-webkit-input-placeholder {
+  color: #999;
+}
+
+.w-input:focus, .w-select:focus {
+  border-color: #3898ec;
+  outline: 0;
+}
+
+.w-input[disabled], .w-select[disabled], .w-input[readonly], .w-select[readonly], fieldset[disabled] .w-input, fieldset[disabled] .w-select {
+  cursor: not-allowed;
+}
+
+.w-input[disabled]:not(.w-input-disabled), .w-select[disabled]:not(.w-input-disabled), .w-input[readonly], .w-select[readonly], fieldset[disabled]:not(.w-input-disabled) .w-input, fieldset[disabled]:not(.w-input-disabled) .w-select {
+  background-color: #eee;
+}
+
+textarea.w-input, textarea.w-select {
+  height: auto;
+}
+
+
+
+@keyframes spin {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
+
+
+ 
+:root {
+  --black: black;
+  --gray-main: #707070;
+  --brand-main: #3a86ff;
+  --white: white;
+}
+
+.w-layout-vflex {
+  flex-direction: column;
+  align-items: flex-start;
+  display: flex;
+}
+
+.w-layout-hflex {
+  flex-direction: row;
+  align-items: flex-start;
+  display: flex;
+}
+
+.text-block {
+  opacity: .4;
+  color: rgba(0, 0, 0, 0);
+  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+  font-size: 200px;
+  font-weight: 700;
+  line-height: 140px;
+}
+
+.text-block-2 {
+  opacity: .4;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 50px;
+}
+
+.stroke-text {
+  color: rgba(0, 0, 0, 0);
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: var(--gray-main);
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.flex-block-2 {
+  justify-content: space-between;
+  width: 100%;
+}
+
+.text-block-3 {
+  color: #3a86ff;
+  -webkit-text-stroke-width: 0px;
+  -webkit-text-stroke-color: #3a86ff;
+  font-family: Petrona, sans-serif;
+  font-size: 80px;
+  font-weight: 800;
+  line-height: 80%;
+}
+
+.flex-block-3 {
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: -5px;
+  margin-left: 150px;
+}
+
+.field-label {
+  color: var(--black);
+}
+
+.field-label-2 {
+  font-size: 20px;
+  line-height: 36px;
+}
+
+.div-block {
+  border-radius: 100px;
+  position: relative;
+  overflow: hidden;
+}
+
+.ikonik-j9436, .ikonik-iao3zh, .ikonik-vm71d, .ikonik-290us {
+  color: #707070;
+}
+
+.ikonik-xtppk {
+  color: #000;
+}
+
+.ikonik-d1nwnk {
+  color: #707070;
+}
+
+.flex-block-4 {
+  grid-column-gap: 25px;
+  grid-row-gap: 25px;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.ikonik-f23ar {
+  color: #707070;
+}
+
+.icon {
+  color: var(--black);
+}
+
+.icon:hover {
+  color: var(--brand-main);
+}
+
+.ikonik-2g5nz, .ikonik-46ne5h {
+  color: #707070;
+}
+
+.ikonik-mohir, .ikonik-sn7h8k, .ikonik-8l55t, .ikonik-culg1, .ikonik-wm4eg {
+  color: 0;
+}
+
+.flex-block-5 {
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-block-4 {
+  grid-column-gap: 8px;
+  grid-row-gap: 8px;
+  color: rgba(112, 112, 112, .95);
+  justify-content: center;
+  align-items: center;
+  font-family: Lato, sans-serif;
+  font-size: 12px;
+  font-weight: 500;
+  display: flex;
+}
+
+.ikonik-62n3y {
+  color: rgba(112, 112, 112, .44);
+}
+
+.ikonik-hbf18j {
+  color: rgba(112, 112, 112, .96);
+}
+
+.flex-block-6 {
+  grid-column-gap: 8px;
+  grid-row-gap: 8px;
+  justify-content: center;
+  align-items: center;
+}
+
+.submit-button {
+  background-color: var(--brand-main);
+  width: 50%;
+  max-width: 140px;
+  height: 100%;
+  padding: 0;
+  font-size: 16px;
+  line-height: 30px;
+  position: absolute;
+  top: auto;
+  bottom: 0%;
+  left: auto;
+  right: 0%;
+  color: #fff;
+  line-height: inherit;
+  cursor: pointer;
+  border: 0;
+  border-radius: 0;
+}
+
+@media screen and (max-width: 991px) {
+  .section {
+    grid-column-gap: 135px;
+    grid-row-gap: 135px;
+  }
+
+  .text-block {
+    font-size: 160px;
+    line-height: 125px;
+  }
+
+  .flex-block-3 {
+    margin-top: -15px;
+    margin-left: 70px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .text-block {
+    font-size: 115px;
+    line-height: 100px;
+  }
+
+  .text-block-3 {
+    font-size: 45px;
+  }
+
+  .flex-block-3 {
+    margin-left: 40px;
+  }
+
+  .field-label-2 {
+    font-size: 18px;
+    line-height: 28px;
+  }
+
+  .submit-button {
+    width: 35%;
+    line-height: 20px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .text-block {
+    font-size: 70px;
+    line-height: 50px;
+  }
+
+  .text-block-2 {
+    -webkit-text-stroke-width: 1px;
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .flex-block {
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+
+  .text-block-3 {
+    font-size: 35px;
+  }
+
+  .flex-block-3 {
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .text-block-4 {
+    text-align: center;
+  }
+
+  .flex-block-6 {
+    grid-column-gap: 1ch;
+    grid-row-gap: 1ch;
+  }
+}
+
