--- a/app/globals.css
+++ b/app/globals.css
@@ -478,7 +478,7 @@ textarea.w-input, textarea.w-select {
   }
 
   .text-block {
-    font-size: 160px;
+    font-size: 100px;
     line-height: 125px;
   }
 
@@ -490,12 +490,12 @@ textarea.w-input, textarea.w-select {
 
 @media screen and (max-width: 767px) {
   .text-block {
-    font-size: 115px;
-    line-height: 100px;
+    font-size: 60px;
+    line-height: 60px;
   }
 
   .text-block-3 {
-    font-size: 45px;
+    font-size: 20px;
   }
 
   .flex-block-3 {
@@ -515,12 +515,12 @@ textarea.w-input, textarea.w-select {
 
 @media screen and (max-width: 479px) {
   .text-block {
-    font-size: 70px;
-    line-height: 50px;
+    font-size: 50px;
+    line-height: 45px;
   }
 
   .text-block-2 {
-    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-width: .9px;
     font-size: 20px;
     line-height: 20px;
   }
